added some lines

--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -12,7 +12,7 @@
            <h3>Зарегистрироваться</h3>
                 <fieldset class="fieldset">
                     <label for="">Email</label>
-                    <input type="email" placeholder="Введите почту">
+                    <input type="email"  placeholder="Введите email" name="email" />
                 </fieldset>
                 
                 <fieldset class="fieldset">  
