--- a/views/AddFilm.ejs
+++ b/views/AddFilm.ejs
@@ -9,7 +9,7 @@
     <div id="container">
         <div id="main">
             <form action="/api/addFilm" method='POST' class="form"  
-            
+            enctype="multipart/form-data"
             >
            <h3>Новый фильм</h3>
 
