--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,18 +19,27 @@
           </div>
           <div class="main-content">
             <h3>Фильмы и сериалы</h3>
-            <div class="main-card">
+            <img src="public/images/films/1682657325456.png" alt="">
+                <%
+                    films.forEach(item=>{
+                        console.log('item=   ',item)
+                %>
+          
+         
+                 
+                <div class="main-card">
                 <div class="card-left">
                     <div class='film-img'>
-                        <img src="/images/films/film1.webp" alt="cc"/>
+                        <img src="<%=item.image%>" alt="cc"/>
                     </div>
                     <div class="film-info">
-                        <a>Все везде и сразу</a>
-                        <a>Everything Everywhere All at Once, 2021, 139  мин</a>
-                        <a href="">США, фантастика</a>
+              
+                        <a><%=item.titleRus%></a>
+                        <a><%=item.year%></a>
+                        <a><%=item.time%></a>
+                        <a href=""><%=item.country%>, <%=item.ganre%></a>
                         <button class="film-btn">
                             <img src="/images/icons/play.svg" alt="">
-                            
                             Смотреть
                         </button>
                     
@@ -48,6 +57,10 @@
                     </button>
                 </div>
             </div>
+
+            <%     
+                })
+            %>
           </div>
         </div>
     </div>
