--- a/public/style/pages/profile.css
+++ b/public/style/pages/profile.css
@@ -5,7 +5,7 @@
 }
 .profile {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 90px;
 
