Delete from to watch function in detail film dont work

--- a/public/style/all.css
+++ b/public/style/all.css
@@ -5,4 +5,5 @@
 @import url('pages/index.css');
 @import url('components/Form.css');
 @import url('pages/profile.css');
-@import url('pages/admin.css')
+@import url('pages/admin.css');
+@import url('pages/detail.css')
