--- a/views/AddFilm.ejs
+++ b/views/AddFilm.ejs
@@ -69,6 +69,11 @@
                        
                     </select>
                 </fieldset>
+
+                <fieldset class="fieldset">
+                    <label for="">Введите ссылку на фильм</label>
+                    <input type="text" placeholder="Введите ссылку на фильм" name="video">
+                </fieldset>
                
 
 
