--- a/views/EditFilm.ejs
+++ b/views/EditFilm.ejs
@@ -44,6 +44,10 @@
                         <input value=" <%=films.time%>" type="text" placeholder="Введите длительность " name="time">
                     </fieldset>
 
+                    <fieldset class="fieldset">
+                        <label for="">Добавьте ссылку на видео</label>
+                        <input value="<%=films.video%>" type="text" placeholder="Введите ссылку на фильм " name="video">
+                    </fieldset>
 
                     <fieldset class="fieldset">
                         <label for="">Cтрана производитель фильма</label>
