--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,6 @@
         <div class="container">
             <div class="main">
                 <div class="categories">
-
-                   
-
-
                     <% genres.forEach(ganre => {
                 // console.log('ganre= ',ganre.name)
 
@@ -33,7 +29,7 @@
  
                 %>
 
-
+       
                 <div class="main-card">
                     <div class="card-left">
                         <div class='film-img'>
@@ -41,12 +37,12 @@
                         </div>
                         <div class="film-info">
 
-                            <a><%=item.titleRus%></a>
-                            <a>год:
+                            <a href="/detail/<%=item._id%>"><%=item.titleRus%></a>
+                            <a href="/detail/<%=item._id%>">год:
                                 <%=item.year%></a>
-                            <a>продолжительность:
+                            <a href="/detail/<%=item._id%>">продолжительность:
                                 <%=item.time%></a>
-                            <a href=""><%=item.country.name %>,
+                            <a href="/detail/<%=item._id%>"><%=item.country.name %>,
                                 <%=item.ganre.name%></a>
                             <button class="film-btn">
                                 <img src="/images/icons/play.svg" alt="">
@@ -63,7 +59,7 @@
                         </div>
                         <%if(user.toWatch && user.toWatch.includes(item._id)){
                     %>
-                            <button class="film-btn" onclick="saveToWatch('<%=item._id%>')">
+                            <button class="film-btn" onclick="deleteFromToWatch('<%=item._id%>')">
 
                                 <img src="/images/saved.png">
                                 Сохранено
@@ -81,6 +77,7 @@
 
                     </div>
                 </div>
+       
 
             <%     
                 })
