--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -18,7 +18,7 @@
                         <p><%=film.titleEng%></p>
 
                         <h1>данные с Юзера <%=user.toWatch%></h1>
-                        <h1>айди фильма <%=film._id%></h1>
+                        <h1>айди фильма<%=film._id%></h1>  
 
                         <% if(user.toWatch.includes(film._id)){%>
                             <button class="film-btn" onclick="deleteFromToWatch('<%=film._id%>')">
@@ -60,6 +60,10 @@
                 
             </div>
   
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            
+            <script src="/js/saveFilm.js"></script>
      
     </body>
+  
 </html>
