added filter by categories

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                 // console.log('ganre= ',ganre.name)
 
                 %>
-                    <a href="/<%=ganre.key%>"><%=ganre.name%></a>
+                    <a href="?Ganres=<%=ganre.key%>"><%=ganre.name%></a>
                 <%
             }) %>
 
