added filter by category and pagination

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,6 +82,17 @@
             <%     
                 })
             %>
+
+
+            <div class="pages">
+                <% 
+                    for(let i=0;i<pages;i++){
+                %>
+                <a href="?page=<%=i%>"><%=i+1%></a>
+                <%
+                    }
+                %>
+            </div>
         </div>
     </body>
 </html></div></div>
