added pagination with filter

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,13 +85,20 @@
 
 
             <div class="pages">
-                <% 
-                    for(let i=0;i<pages;i++){
-                %>
-                <a href="?page=<%=i%>"><%=i+1%></a>
-                <%
-                    }
-                %>
+               <%
+                        let localsString = ''
+                        if(locals.Ganres){
+                            localsString = `Ganres=${locals.Ganres}&`
+                        }
+                        if(locals.search){
+                            localsString = `search=${locals.search}&`
+                        }
+                        for(let i = 0; i < pages; i++){
+                    %>
+                        <a href="?<%=localsString%>page=<%=i%>"><%=i + 1%></a>
+                    <%
+                        }
+                    %>
             </div>
         </div>
     </body>
